src/main/java/com/example/demo/error/exceptions/NotFoundProduct.java
package com.example.demo.error.exceptions;

import java.util.Scanner;

public class NotFoundProduct extends RuntimeException {
    public NotFoundProduct (String message){

    }
}
